# cis-194

./: cis.cabal
homework1/: homework1.cabal
homework1/src/: Homework.hs
homework1/test/: HomeworkSpec.hs
homework2/: cabal.sandbox.config  homework2.cabal
homework2/src/: Homework.hs
homework2/test/: HomeworkSpec.hs
src/: Homework1.hs  Homework4.hs  log.txt
src/Homework2/: Log.hs  LogAnalysis.hs
test/: Homework1Spec.hs
test/Homework2/: LogAnalysisSpec.hs
