name:              cis
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.8

library
  exposed-modules: Homework1

  hs-source-dirs:  src

  build-depends:   base

test-suite spec
  type: exitcode-stdio-1.0

  hs-source-dirs: test

  main-is: Spec.hs

  build-depends: base  == 4.*
               , hspec >= 1.3
               , cis